# T2-RELION-kernel

./: .gitignore  01_dataset_preparation.sh  02_build.sh  03_run.sh  04_postprocess.sh  CMakeLists.txt  README.md
scripts/: draw_performance.py  zenodo_fetch_and_extract.py
src/: acc_helper_functions_impl.h  acc_projector.h  acc_projector_impl.h  acc_projectorkernel_impl.h  check.cuh  coarse_img2col.cuh  coarse_kernel.cuh  coarse_splitImg.cuh  coarse_splitImg_BCF_NFUSE.cuh  coarse_splitImg_BCF_PMO_NFUSE.cuh  coarse_splitImg_BCF_PMO_TMDB_NFUSE.cuh  coarse_splitImg_BCF_PMO_TMDB_NFUSE_NT_E.cuh  coarse_splitImg_NFUSE.cuh  coarse_splitImg_cudacore_NFUSE.cuh  command_line_parser.h  common.h  cuda_device_utils.cuh  cuvector.cuh  diff2.cuh  kernel_block_params.cuh  kernel_test_result.h  main.cu  mma_utils.cuh  orientation_matrix_handler.cuh  reg_bitmap.cuh  translation_matrix_handler.cuh  utilities.h
